<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">




    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:id="@+id/tableRow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/player1Side"/>
            <TextView
                android:id="@+id/p1Win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1Win"/>
            <TextView
                android:id="@+id/player2Side"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/player2Side"/>
            <TextView
                android:id="@+id/p2Win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2Win"/>
            </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/seedView1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p1cup1"/>
            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1c0"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2c11"
                android:onClick="sendMessage"/>

            <TextView
                android:id="@+id/seedview2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p2cup1"/>
        </TableRow>
        <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/p1cup2"/>
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1c1"
            android:onClick="sendMessage"/>
        <Button
            android:id="@+id/button10"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2c10"
            android:onClick="sendMessage"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/p2cup2"/>
    </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p1cup3"/>
            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1c2"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2c9"
                android:onClick="sendMessage"/>
            <TextView
                android:id="@+id/seedView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p2cup3"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/seedView3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p1cup4"/>
            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1c3"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2c8"
                android:onClick="sendMessage"/>
            <TextView
                android:id="@+id/seedView4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p2cup4"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/p1c6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p1cup5"/>
            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1c4"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2c7"
                android:onClick="sendMessage"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p2cup5"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p1cup6"/>
            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p1c5"
                android:onClick="sendMessage"/>
            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2c6"
                android:onClick="sendMessage"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/p2cup6"/>
        </TableRow>
        </TableLayout>

</LinearLayout>
